feat(patterns): Builder, Strategy ve Observer tasarim kaliplari entegre edildi, event yayini dogrulandi